--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,18 @@
 *.jpg
 *.pth
 *.pyc
+*.pt
+*.np
+*.npy
 *.jpeg
 *.wav
 *.safetensors
 junk/*
 wandb/*
+out/*
+discover_lora_diffusion/wandb/**.*
+discover_lora_diffusion/wandb*
+discover_lora_vae/wandb/**
+discover_lora_vae/wandb
+*.wandb
+*wandb*
